# spore

./: Cargo.toml  LICENSE  architecture.md
lib/core/: Cargo.toml
lib/tws/: Cargo.toml
lib/tws/examples/: ib.rs
lib/tws/src/: api.rs  buf.rs  codec.rs  commission_report.rs  connection.rs  contract.rs  contract_detail.rs  currency_pair.rs  error.rs  io.rs  lib.rs  order.rs  order_state.rs  scanner_subscription.rs  session.rs  tagvalue.rs  tick_type.rs  tws_message.rs
lib/tws/src/decoder/: commission_report.rs  constants.rs  contract.rs  execution.rs  group.rs  handshark.rs  mod.rs  open_order.rs  order_state.rs  portfolio.rs  position.rs  security_def.rs  soft_dollar_tier.rs  tagvalue.rs  tick_option_computation.rs  tick_price.rs  tick_size.rs  verify_and_auth.rs  wire.rs
lib/tws/src/encoder/: api.rs  buf.rs  mod.rs
lib/tws/src/model/: commission_report.rs  contract_detail.rs  execution.rs  mod.rs  order.rs  order_condition.rs  scanner_subscription.rs  tick_type.rs
server/ib/: Cargo.toml
server/monitor/: Cargo.toml
server/rs/: Cargo.toml
server/ss/: Cargo.toml
